# build

./: CMakeLists.txt  Makefile  README.md  build.cfg  build.code-workspace  compile_commands.json
.github/workflows/: build.yml  itest.yml
examples/: names
examples/00_exe/src/: main.c
examples/01_lib/src/: lib.c
examples/02_test/test/: main.c
examples/03_extern/: build.cfg
examples/03_lib_test/src/: lib.c
examples/03_lib_test/test/: main.c
examples/04_driver_test/test/: main.c
examples/04_drv_test/test/: main.c
examples/05_drv_exe/drivers/: drv.c
examples/05_extern/: build.cfg
examples/05_extern/src/: main.c
examples/06_lib_driver_test/drivers/: drv.c
examples/06_lib_driver_test/src/: lib.c
examples/06_lib_driver_test/test/: main.c
examples/06_lib_drv_test/drivers/: drv.c
examples/06_lib_drv_test/src/: lib.c
examples/06_lib_drv_test/test/: main.c
examples/06_lib_test/src/: lib.c
examples/07_exe_driver/drivers/: example.c
examples/07_zip/: build.cfg
examples/07_zip.make/: build.cfg
examples/11_hello/: build.cfg
examples/12_extern/: build.cfg
examples/14_platform/src/: main.c
examples/15_example/include/: lib.h
examples/15_example/src/: lib.c
examples/17_build/: build.cfg
examples/17_hello/: build.cfg
pkgs/: CMakeLists.txt  pkgs.mk
pkgs/cbuild/: CMakeLists.txt  build.cfg  pkg.mk
pkgs/cbuild/drivers/: gen_cmake.c  gen_make.c  gen_none.c  mod_cfg.c  mod_drv.c  mod_example.c  mod_exe.c  mod_lib.c  mod_pkgs.c  mod_test.c
pkgs/cbuild/drivers.old/: gen_cmake.c  gen_make.c
pkgs/cbuild/include/: config.h  config_cfg.h  config_fs.h  config_schema.h  deps.h  gen.h  mod.h  mod_base.h  pkg.h  pkg_loader.h  pkgs.h  proj.h  proj_cfg.h  proj_fs.h  proj_gen.h  proj_graph.h  proj_loader.h  proj_utils.h  registry.h  target.h  targets.h  var.h  vars.h
pkgs/cbuild/src/: config.c  config_cfg.c  config_fs.c  config_schema.c  gen.c  mod_base.c  pkg.c  pkg_loader.c  pkgs.c  proj.c  proj_cfg.c  proj_fs.c  proj_gen.c  proj_graph.c  proj_loader.c  proj_utils.c  registry.c  target.c  targets.c  var.c  vars.c
pkgs/cbuild/src.old/: proj.c  var.c
pkgs/cbuild/test/: main.c  t_config.c  t_config_cfg.c  t_config_fs.c  (+30 more)
pkgs/cparse/: build.cfg
pkgs/ctest/: build.cfg
pkgs/cutils/: build.cfg
pkgs/libbuild/: CMakeLists.txt  pkg.mk
scripts/: bootstrap.bat  bootstrap.sh  build.bat  build.sh  test.bat  test.sh
test/exe/: Makefile  pkg.mk
test/exe_dep_lib/: Makefile
test/ext/: proj.cfg
test/lib/: Makefile  pkg.mk
tests/exe/: Makefile
tests/my/: Makefile
tests/package/: Makefile  pkg.mk
(+100 files in other folders)
